// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as disabled 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
        Object {
          "opacity": 0.5,
        },
      ]
    }
  />
</TouchableOpacity>
`;

exports[`should render text only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "height": 16,
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render text with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "height": 16,
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          Object {
            "color": "#aaa",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom content 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Text>
      CUSTOM CONTENT
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  />
</TouchableOpacity>
`;

exports[`should render with image only 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "marginHorizontal": 5,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render with left image 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "left.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "marginHorizontal": 5,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
        ]
      }
    />
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "height": 16,
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      Right Text
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`should render with right image 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  disabled={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#8e8e93",
          "borderRadius": 5,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "height": 16,
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      Left Text
    </Text>
    <Image
      source={
        Object {
          "uri": "right.png",
        }
      }
      style={
        Array [
          Object {
            "flexShrink": 0,
            "height": 20,
            "marginHorizontal": 5,
            "tintColor": "#ffffff",
            "width": 20,
          },
          undefined,
        ]
      }
    />
  </View>
</TouchableOpacity>
`;
